--- a/templates/blog.html
+++ b/templates/blog.html
@@ -18,7 +18,8 @@
                         <div class="blog_img"><img src="static/images/blog-img1.jpeg"></div>
                         <h4 class="date_text">05 April</h4>
                         <h4 class="prep_text">PREP TECHNIQUES Coffee</h4>
-                        <p class="lorem_text">On a warm day, nothing beats a glass of cold brew. This method uses time rather than heat—coffee grounds steep in cold water for 12-24 hours, producing a drink that’s naturally sweet, low in acidity, and incredibly smooth. We love serving cold brew over ice, and it’s easy to make a big batch at home for the week ahead.</p>
+                        <p class="lorem_text">Cold Brew: Smooth and Refreshing
+On a warm day, nothing beats a glass of cold brew. This method uses time rather than heat—coffee grounds steep in cold water for 12-24 hours, producing a drink that’s naturally sweet, low in acidity, and incredibly smooth. We love serving cold brew over ice, and it’s easy to make a big batch at home for the week ahead.</p>
                      </div>
                      <div class="read_btn"><a href="#">Read More</a></div>
                   </div>
