--- a/templates/about.html
+++ b/templates/about.html
@@ -12,7 +12,9 @@
                      <div class="about_taital_box">
                         <h1 class="about_taital">About Our shop</h1>
                         <h1 class="about_taital_1">Coffee distribution '</h1>
-                        <p class=" about_text">Welcome to Coffo Coffee Shop, your neighborhood destination for quality coffee and community. At Coffo, we believe that coffee is more than just a beverage—it’s an experience that brings people together.At Coffo, we’re proud to support our local community through events, partnerships, and by providing a space where everyone feels welcome. We also offer a selection of fresh pastries and snacks, all made with locally sourced ingredients.Thank you for being part of the Coffo family. We can’t wait to welcome you—one cup at a time.</p>
+                        <p class=" about_text">Welcome to Coffo Coffee Shop, your neighborhood destination for quality coffe.
+At Coffo, we believe that coffee is more than just a beverage—it’s an experience that brings people together.
+We can’t wait to welcome you—one cup at a time.</p>
                         <div class="readmore_btn"><a href="#">Read More</a></div>
                      </div>
                   </div>
