--- a/templates/blog.html
+++ b/templates/blog.html
@@ -41,14 +41,7 @@ Ready to start brewing? Tell us your favorite method in the comments or ask our 
                         <h4 class="date_text">05 April</h4>
                         <h4 class="prep_text">Enjoy Best Coffee</h4>
                         <p class="lorem_text">
-It starts with a bean
-we carefully source our beans from sustainable farms around the world, focusing on quality, ethical practices, and unique flavor profiles.
-
-Freshness Matters 
-The best coffee is always fresh. We grind our beans just before brewing .
-
-Experience 
-At Coffo, the best coffee is about more than what’s in your cup.
+At Coffo, we know that the best coffee is about more than just what’s in your cup. It’s about the feeling you get when you step inside—relaxing in a cozy corner, catching up with friends, or sharing a laugh with our friendly baristas.
 
 Ready to discover your best coffee?
 Stop by Coffo and let us craft your perfect cup.
