--- a/templates/about.html
+++ b/templates/about.html
@@ -12,9 +12,7 @@
                      <div class="about_taital_box">
                         <h1 class="about_taital">About Our shop</h1>
                         <h1 class="about_taital_1">Coffee distribution '</h1>
-                        <p class=" about_text">Welcome to Coffo Coffee Shop, your neighborhood destination for quality coffe.
-At Coffo, we believe that coffee is more than just a beverage—it’s an experience that brings people together.
-We can’t wait to welcome you—one cup at a time.</p>
+                        <p class=" about_text">has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editorhas a more-or-less normal distribution of letters, as oppos</p>
                         <div class="readmore_btn"><a href="#">Read More</a></div>
                      </div>
                   </div>
