--- a/templates/blog.html
+++ b/templates/blog.html
@@ -18,21 +18,7 @@
                         <div class="blog_img"><img src="static/images/blog-img1.jpeg"></div>
                         <h4 class="date_text">05 April</h4>
                         <h4 class="prep_text">PREP TECHNIQUES Coffee</h4>
-                        <p class="lorem_text">
-At Coffo, we believe that every exceptional cup of coffee begins long before the brewing process. The steps we take before making your coffee—our “pre-technique”—are just as important as the brewing method itself. Here’s how we ensure that every cup you enjoy is the best it can be:
-
-Consistent Grinding: Just before brewing, we grind our beans to the ideal coarseness for each method, ensuring maximum freshness and taste.
-
-Proper Storage: Beans are stored in airtight containers, away from light and moisture, to preserve their flavor.
-
-Select Quality Beans: Everything starts with fresh, high-quality coffee beans. We source ours from trusted growers .
-
-Pure Water: We always use filtered water, because great coffee can only come from great water.
-
-Measure Precisely: The right ratio of coffee to water is crucial—so we weigh both for consistency in every cup.
-
-By focusing on these foundational steps, we set the stage for an unforgettable coffee experience made with love—from the very beginning.
-</p>
+                        <p class="lorem_text">distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a moredistracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more</p>
                      </div>
                      <div class="read_btn"><a href="#">Read More</a></div>
                   </div>
@@ -41,12 +27,7 @@ By focusing on these foundational steps, we set the stage for an unforgettable c
                         <div class="blog_img"><img src="static/images/blog-img2.png"></div>
                         <h4 class="date_text">05 April</h4>
                         <h4 class="prep_text">Enjoy Best Coffee</h4>
-                        <p class="lorem_text">
-At Coffo, we know that the best coffee is about more than just what’s in your cup. It’s about the feeling you get when you step inside—relaxing in a cozy corner, catching up with friends, or sharing a laugh with our friendly baristas.
-
-Ready to discover your best coffee?
-Stop by Coffo and let us craft your perfect cup.
-</p>
+                        <p class="lorem_text">distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a moredistracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more</p>
                      </div>
                      <div class="read_btn"><a href="#">Read More</a></div>
                   </div>
