--- a/templates/blog.html
+++ b/templates/blog.html
@@ -18,7 +18,7 @@
                         <div class="blog_img"><img src="static/images/blog-img1.jpeg"></div>
                         <h4 class="date_text">05 April</h4>
                         <h4 class="prep_text">PREP TECHNIQUES Coffee</h4>
-                        <p class="lorem_text">distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a moredistracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more</p>
+                        <p class="lorem_text">At Coffo, we believe that every exceptional cup of coffee begins long before the brewing process. The steps we take before making your coffee—our “pre-technique”—are just as important as the brewing method itself.</p>
                      </div>
                      <div class="read_btn"><a href="#">Read More</a></div>
                   </div>
@@ -27,7 +27,11 @@
                         <div class="blog_img"><img src="static/images/blog-img2.png"></div>
                         <h4 class="date_text">05 April</h4>
                         <h4 class="prep_text">Enjoy Best Coffee</h4>
-                        <p class="lorem_text">distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a moredistracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more</p>
+                        <p class="lorem_text">At Coffo, we know that the best coffee is about more than just what’s in your cup. It’s about the feeling you get when you step inside—relaxing in a cozy corner, catching up with friends, or sharing a laugh with our friendly baristas. We believe that every visit should feel like a treat, whether you’re starting your morning or taking a break in the afternoon.
+
+Ready to  discover your best coffee?
+Stop by Coffo and let us craft your perfect cup. 
+</p>
                      </div>
                      <div class="read_btn"><a href="#">Read More</a></div>
                   </div>
