--- a/templates/about.html
+++ b/templates/about.html
@@ -12,7 +12,7 @@
                      <div class="about_taital_box">
                         <h1 class="about_taital">About Our shop</h1>
                         <h1 class="about_taital_1">Coffee distribution '</h1>
-                        <p class=" about_text">has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editorhas a more-or-less normal distribution of letters, as oppos</p>
+                        <p class=" about_text">At Coffo, I believe that coffee should be shared and accessible to everyone who loves it. Coffee distribution isn’t just about getting beans from one place to another—it’s about connecting people, supporting ethical growers, and making sure every cup you enjoy is fresh and full of character.</p>
                         <div class="readmore_btn"><a href="#">Read More</a></div>
                      </div>
                   </div>
