--- a/templates/coffees.html
+++ b/templates/coffees.html
@@ -22,7 +22,7 @@
                               <div class="coffee_img"><img src="static/images/img-1.png"></div>
                               <div class="coffee_box">
                                  <h3 class="types_text">TYPES OF COFFEE</h3>
-                                 <p class="looking_text">looking at its layout. The point of</p>
+                                 <p class="looking_text">At Coffo, you can enjoy classics like espresso, cappuccino, and latte, or discover favorites like cold brew and flat white. Each type brings out different flavors and offers a new way to experience coffee.</p>
                                  <div class="read_bt"><a href="#">Read More</a></div>
                               </div>
                            </div>
@@ -30,7 +30,8 @@
                               <div class="coffee_img"><img src="static/images/img-2.png"></div>
                               <div class="coffee_box">
                                  <h3 class="types_text">BEAN VARIETIES</h3>
-                                 <p class="looking_text">looking at its layout. The point of</p>
+                                 <p class="looking_text">Behind every great cup is the bean.
+ At Coffo, we rotate bean selections so you can always try something unique.</p>
                                  <div class="read_bt"><a href="#">Read More</a></div>
                               </div>
                            </div>
@@ -38,7 +39,7 @@
                               <div class="coffee_img"><img src="static/images/img-3.png"></div>
                               <div class="coffee_box">
                                  <h3 class="types_text">COFFEE & PASTRY</h3>
-                                 <p class="looking_text">looking at its layout. The point of</p>
+                                 <p class="looking_text">There’s something truly special about pairing a fresh pastry with your favorite coffee.</p>
                                  <div class="read_bt"><a href="#">Read More</a></div>
                               </div>
                            </div>
@@ -46,7 +47,7 @@
                               <div class="coffee_img"><img src="static/images/img-4.png"></div>
                               <div class="coffee_box">
                                  <h3 class="types_text">COFFEE TO GO</h3>
-                                 <p class="looking_text">looking at its layout. The point of</p>
+                                 <p class="looking_text">Life gets busy, but great coffee should always be within reach. That’s why Coffo offers coffee to go—so you can bring a little warmth and comfort wherever your day takes you. Whether you’re heading to work, taking a walk, or just need a pick-me-up.</p>
                                  <div class="read_bt"><a href="#">Read More</a></div>
                               </div>
                            </div>
@@ -60,7 +61,7 @@
                               <div class="coffee_img"><img src="static/images/img-1.png"></div>
                               <div class="coffee_box">
                                  <h3 class="types_text">TYPES OF COFFEE</h3>
-                                 <p class="looking_text">looking at its layout. The point of</p>
+                                 <p class="looking_text">At Coffo, you can enjoy classics like espresso, cappuccino, and latte, or discover favorites like cold brew and flat white. Each type brings out different flavors and offers a new way to experience coffee.</p>
                                  <div class="read_bt"><a href="#">Read More</a></div>
                               </div>
                            </div>
@@ -68,7 +69,8 @@
                               <div class="coffee_img"><img src="static/images/img-2.png"></div>
                               <div class="coffee_box">
                                  <h3 class="types_text">BEAN VARIETIES</h3>
-                                 <p class="looking_text">looking at its layout. The point of</p>
+                                 <p class="looking_text">Behind every great cup is the bean. 
+At Coffo, we rotate bean selections so you can always try something unique</p>
                                  <div class="read_bt"><a href="#">Read More</a></div>
                               </div>
                            </div>
@@ -76,7 +78,7 @@
                               <div class="coffee_img"><img src="static/images/img-3.png"></div>
                               <div class="coffee_box">
                                  <h3 class="types_text">COFFEE & PASTRY</h3>
-                                 <p class="looking_text">looking at its layout. The point of</p>
+                                 <p class="looking_text">There’s something truly special about pairing a fresh pastry with your favorite coffee.</p>
                                  <div class="read_bt"><a href="#">Read More</a></div>
                               </div>
                            </div>
@@ -84,7 +86,7 @@
                               <div class="coffee_img"><img src="static/images/img-4.png"></div>
                               <div class="coffee_box">
                                  <h3 class="types_text">COFFEE TO GO</h3>
-                                 <p class="looking_text">looking at its layout. The point of</p>
+                                 <p class="looking_text">Life gets busy, but great coffee should always be within reach. That’s why Coffo offers coffee to go—so you can bring a little warmth and comfort wherever your day takes you. Whether you’re heading to work, taking a walk, or just need a pick-me-up.</p>
                                  <div class="read_bt"><a href="#">Read More</a></div>
                               </div>
                            </div>
@@ -98,7 +100,7 @@
                               <div class="coffee_img"><img src="static/images/img-1.png"></div>
                               <div class="coffee_box">
                                  <h3 class="types_text">TYPES OF COFFEE</h3>
-                                 <p class="looking_text">looking at its layout. The point of</p>
+                                 <p class="looking_text"> At Coffo, you can enjoy classics like espresso, cappuccino, and latte, or discover favorites like cold brew and flat white. Each type brings out different flavors and offers a new way to experience coffee.</p>
                                  <div class="read_bt"><a href="#">Read More</a></div>
                               </div>
                            </div>
@@ -106,7 +108,8 @@
                               <div class="coffee_img"><img src="static/images/img-2.png"></div>
                               <div class="coffee_box">
                                  <h3 class="types_text">BEAN VARIETIES</h3>
-                                 <p class="looking_text">looking at its layout. The point of</p>
+                                 <p class="looking_text">Behind every great cup is the bean. 
+At Coffo,we rotate bean selections so you can always try something unique.</p>
                                  <div class="read_bt"><a href="#">Read More</a></div>
                               </div>
                            </div>
@@ -114,7 +117,7 @@
                               <div class="coffee_img"><img src="static/images/img-3.png"></div>
                               <div class="coffee_box">
                                  <h3 class="types_text">COFFEE & PASTRY</h3>
-                                 <p class="looking_text">looking at its layout. The point of</p>
+                                 <p class="looking_text">There’s something truly special about pairing a fresh pastry with your favorite coffee.</p>
                                  <div class="read_bt"><a href="#">Read More</a></div>
                               </div>
                            </div>
@@ -122,7 +125,7 @@
                               <div class="coffee_img"><img src="static/images/img-4.png"></div>
                               <div class="coffee_box">
                                  <h3 class="types_text">COFFEE TO GO</h3>
-                                 <p class="looking_text">looking at its layout. The point of</p>
+                                 <p class="looking_text">Life gets busy, but great coffee should always be within reach. That’s why Coffo offers coffee to go—so you can bring a little warmth and comfort wherever your day takes you. Whether you’re heading to work, taking a walk, or just need a pick-me-up.</p>
                                  <div class="read_bt"><a href="#">Read More</a></div>
                               </div>
                            </div>
